--- a/info.yaml
+++ b/info.yaml
@@ -1,6 +1,6 @@
 # Tiny Tapeout project information
 project:
-  title:        "8-Bit ALU"      # Project title
+  title:        "4-Bit ALU"      # Project title
   author:       "Daniel Kaminski"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
   description:  ""      # One line description of what your project does
@@ -16,33 +16,39 @@ project:
   # List your project's source files here. Source files must be in ./src and you must list each source file separately, one per line:
   source_files:        
     - "project.v"
+    - "adder.v"
+    - "alu.v"
+    - "control.v"
+    - "fullAdder.v"
+    - "logical.v"
+    - "shifter.v"
 
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
-  ui[3]: ""
-  ui[4]: ""
-  ui[5]: ""
-  ui[6]: ""
-  ui[7]: ""
+  ui[0]: "B[0]"
+  ui[1]: "B[1]"
+  ui[2]: "B[2]"
+  ui[3]: "B[3]"
+  ui[4]: "A[0]"
+  ui[5]: "A[1]"
+  ui[6]: "A[2]"
+  ui[7]: "A[3]"
 
   # Outputs
-  uo[0]: ""
-  uo[1]: ""
-  uo[2]: ""
-  uo[3]: ""
-  uo[4]: ""
-  uo[5]: ""
-  uo[6]: ""
-  uo[7]: ""
+  uo[0]: "Z"
+  uo[1]: "N"
+  uo[2]: "V"
+  uo[3]: "C"
+  uo[4]: "Y[0]"
+  uo[5]: "Y[1]"
+  uo[6]: "Y[2]"
+  uo[7]: "Y[3]"
 
   # Bidirectional pins
-  uio[0]: ""
-  uio[1]: ""
-  uio[2]: ""
+  uio[0]: "FS[0]"
+  uio[1]: "FS[1]"
+  uio[2]: "FS[2]"
   uio[3]: ""
   uio[4]: ""
   uio[5]: ""
