--- a/info.yaml
+++ b/info.yaml
@@ -2,8 +2,8 @@
 project:
   title:        "4-Bit ALU"      # Project title
   author:       "Daniel Kaminski"      # Your name
-  discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+  discord:      "lopash"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
+  description:  "4-Bit ALU with Cornell ECE2300 op-code instructions."      # One line description of what your project does
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
 
